Height of banner

--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body, html {
 }
 
 #jumbo {
+  height:100%;
   background-color:darkgrey;
   color:white;
   background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) ), url("Images/city-of-edmonton.jpg");
