--- a/main.css
+++ b/main.css
@@ -3,17 +3,27 @@ body, html {
 }
 
 #jumbo {
-  height:100%;
   background-color:darkgrey;
   color:white;
   background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) ), url("Images/city-of-edmonton.jpg");
-  background-repeat:no-repeat;
-  background-size:cover;
-  background-position: center center;
+  height: 100%;
+  min-height:500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media only screen and (max-height: 500px) {
+    .banner-img {
+        display:none;
+    }
 }
 
 .jumbotron {
   padding-bottom: 10em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
@@ -23,8 +33,7 @@ h1 {
 }
 
 .jumbotron img {
-  margin-top: 5em;
-  margin-bottom: 5em;
+  margin: 3em auto;
 }
 
 #socials {
