--- a/experience.css
+++ b/experience.css
@@ -9,8 +9,8 @@
 }
 
 #parallax1 {
-  background-image: url("Images/sunia-group.jpg");
-  height: 50%;
+  background-image: url("Images/sunia-group.JPG");
+  height: 50vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,7 +19,7 @@
 
 #parallax2 {
   background-image: url("Images/book-compilation.jpg");
-  height: 50%;
+  height: 50vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
