--- a/contact.css
+++ b/contact.css
@@ -2,24 +2,71 @@
   height: 50vh;
 }
 
-#contactForm {
-
-  max-width:1200px;
-
+.form-container {
+  max-width:700px;
+  margin: auto;
 }
 
-body {
-
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 6px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
 }
-h1{
 
-}
+/* Style the label to display next to the inputs */
 label {
-    color: #333;
+  padding: 5px;
+  display: inline-block;
 }
-.btn-send {
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin-bottom: 20px;
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: #B22222;
+  color: white;
+  padding: 10px;
+  margin-top:20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float:right;
+}
+
+/* Style the container */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 75%;
+    margin-top: 0;
+  }
 }
