--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body, html {
 #jumbo {
   background-color:darkgrey;
   color:white;
-  background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) ), url("Images/crimson-sky.jpg");
+  background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) ), url("Images/city-of-edmonton-bg.jpg");
   height: 100vh;
   min-height:500px;
   background-position: center;
