--- a/projects.css
+++ b/projects.css
@@ -2,7 +2,11 @@
   height: 50vh;
 }
 
-a.card,
-a.card:hover {
-  color: inherit;
+img {
+  background: #F1F1FA;
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 10px auto;
+  border: 0;
 }
