feat: did some stuff

--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -1,8 +1,38 @@
 <div class="container-fluid text-center block-socials">
-	<a href="https://www.facebook.com/michaelfromyeg" target="_blank" class="socials fb"><i class="fab fa-facebook"></i></a>
-	<a href="https://www.instagram.com/michaelfromyeg" target="_blank" class="socials ig"><i class="fab fa-instagram"></i></a>
-	<a href="https://twitter.com/michaelfromyeg" target="_blank" class="socials tw"><i class="fab fa-twitter"></i></a>
-	<a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" target="_blank" class="socials yt"><i class="fab fa-youtube"></i></a>
-	<a href="https://github.com/michaelfromyeg" target="_blank" class="socials gt"><i class="fab fa-github"></i></a>
-	<a href="https://www.linkedin.com/in/michaelfromyeg/" target="_blank" class="socials ln"><i class="fab fa-linkedin"></i></a>
+    <a
+        href="https://www.facebook.com/michaelfromyeg"
+        target="_blank"
+        class="socials fb"
+        ><i class="fab fa-facebook"></i
+    ></a>
+    <a
+        href="https://www.instagram.com/michaelfromyeg"
+        target="_blank"
+        class="socials ig"
+        ><i class="fab fa-instagram"></i
+    ></a>
+    <a
+        href="https://twitter.com/michaelfromyeg"
+        target="_blank"
+        class="socials tw"
+        ><i class="fab fa-twitter"></i
+    ></a>
+    <a
+        href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ"
+        target="_blank"
+        class="socials yt"
+        ><i class="fab fa-youtube"></i
+    ></a>
+    <a
+        href="https://github.com/michaelfromyeg"
+        target="_blank"
+        class="socials gt"
+        ><i class="fab fa-github"></i
+    ></a>
+    <a
+        href="https://www.linkedin.com/in/michaelfromyeg/"
+        target="_blank"
+        class="socials ln"
+        ><i class="fab fa-linkedin"></i
+    ></a>
 </div>
