--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,55 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>{{ page.title }}</title>
+        <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/mjd-logo-final-large-01.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link
+            rel="stylesheet"
+            href="{{ site.baseurl }}/assets/css/styles.css"
+        />
+        <link
+            rel="shortcut icon"
+            type="image/png"
+            href="{{ site.baseurl }}/assets/images/mjd-logo-final-large-01.png"
+        />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"
+        />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123146160-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-123146160-1"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
 
-      gtag('config', 'UA-123146160-1');
-    </script>
+            gtag("config", "UA-123146160-1");
+        </script>
 
-    
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+            integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+            crossorigin="anonymous"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap"
+            rel="stylesheet"
+        />
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
+        {% feed_meta %} {% seo %}
+    </head>
+    <body>
+        {% include header.html %} {% include navigation.html %}
+        <main role="main" class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    {{ content }}
+                    <hr />
+                    <br />
+                </div>
+                <div class="col-md-4">{% include sidebar.html %}</div>
+            </div>
+        </main>
+        {% include footer.html %} {% include credit.html %}
+    </body>
 
-    
-
-    {% feed_meta %}
-    {% seo %}
-  </head>
-  <body>
-    {% include header.html %}
-    {% include navigation.html %}
-    <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
-          {{ content }}
-          <hr><br>
-        </div>
-        <div class="col-md-4">
-          {% include sidebar.html %}
-        </div>
-      </div>
-    </main>
-    {% include footer.html %}
-    {% include credit.html %}
-  </body>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-  <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
-  <script type="text/javascript" src="assets/js/custom.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+    <script
+        type="text/javascript"
+        src="{{ site.baseurl }}/assets/js/instafeed.min.js"
+    ></script>
+    <script
+        type="text/javascript"
+        src="{{ site.baseurl }}/assets/js/custom.js"
+    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </html>
