--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,4 +1,7 @@
 <div class="credit">
-	<p>© Copyright Michael DeMarco 2019</p>
-	<p>Site powered by blood, sweat, and tears. Oh, and <a href="https://pages.github.com/">Github Pages.</a></p>
+    <p>© Copyright Michael DeMarco 2019</p>
+    <p>
+        Site powered by blood, sweat, and tears. Oh, and
+        <a href="https://pages.github.com/">Github Pages.</a>
+    </p>
 </div>
