--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,1 @@
-<footer class="container-fluid">
-	{% include socials.html %}
-</footer>
+<footer class="container-fluid">{% include socials.html %}</footer>
