--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,15 @@
 <div class="header">
+    {% include socials.html %}
 
-  {% include socials.html %}
+    <img
+        class="logo"
+        src="{{ site.baseurl }}/assets/images/mjd-logo-final-large-01.png"
+        alt="Personal logo"
+        width="175px"
+        height="175px"
+    />
 
-  <img class="logo" src="/assets/images/mjd-logo-final-large-01.png" alt="Personal logo" width="175px" height="175px">
+    <h1 class="welcome"><strong>MICHAEL J. DEMARCO</strong></h1>
 
-  <h1 class="welcome"><strong>MICHAEL J. DEMARCO</strong></h1>
-
-  <p class="welcome"><strong>VENI. VIDI. VICI.</strong></p>
-
-</div>  
+    <p class="welcome"><strong>VENI. VIDI. VICI.</strong></p>
+</div>
