feat: fix another path?

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 * {
   font-family: 'Libre Franklin', sans-serif;
 }
@@ -73,8 +75,13 @@ div#collapsibleNavbar a.nav-link:hover {
 
 .header {
   /* background image */
-  background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3) ), url("/../assets/images/crimson-sky.jpg");
+  // background: linear-gradient( rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3) ), url("/../assets/images/crimson-sky.jpg");
   //background-image: url(/../assets/images/crimson-sky.jpg);
+  background: linear-gradient(
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0.3)
+    ), url("/michaeldemar.co-v2/assets/images/crimson-sky.jpg");
+  
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
